# Inventorize

./: .gitignore  Cargo.toml  build.bat  build.sh  debug.bat  inventorize.db  inventorize.db-shm  inventorize.db-wal  schema.xlsx
.github/workflows/: build.yml
db/: erd.typ  lib.typ  schema.xlsx
db/migrations/: 0001_init.sql
frontend/: index.html  package.json  vite.config.js
frontend/login/: App.vue  index.html
frontend/public/: colours.scss  import.scss
frontend/src/: App.vue  index.html  main.js
frontend/src/component/: add-component.vue  component-edit-layout.vue  component.vue  new-component.vue  update-component.vue
frontend/src/error/: ErrorBox.vue
frontend/src/home/: home.vue
labels/: box.typ  vial.typ
migrations/: 0001_init.sql
preview/jogs/0.2.0/: license.html
src/: main.rs
src/cli/: cli.rs  mod.rs
src/cli/config/: mod.rs
src/config/: command.rs
src/db/: components.rs  create.rs  db.rs  manage.rs  mod.rs  prompt.rs
src/db/prompt/: mod.rs  prompt.rs  prompts.rs  service.rs
src/db/transport/: mod.rs  post_component.rs
src/db/types/: attribute_schema.json  component_type.rs  mod.rs  service.rs  transport_type.rs
src/error/: db.rs  error.rs  json.rs  label.rs  mod.rs
src/label/: label.rs  mod.rs  package_cache.rs  template_cache.rs  typst_wrapper.rs
src/lable/: lable.rs  mod.rs
src/server/: entry.rs  handler.rs  login.rs  mod.rs  server_state.rs
src/server/db_api/: get_all_component.rs  get_all_prompt.rs  get_component.rs  get_first_component.rs  mod.rs  post_build_label.rs  post_build_label_zip.rs  post_component.rs  post_component_type.rs  post_id_get_component.rs  post_id_remove_component.rs  post_id_remove_list_component.rs  post_search_component.rs  post_search_get_component.rs  post_update_component.rs
src/server/login_api/: handler.rs  login.rs  mod.rs
