[package]
name = "Inventorize"
version = "0.1.0"
edition = "2024"
authors = ["FBanna"]
description = "organise parts inventory using a web app and qr code stickers!"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
clap = { version = "4.5.32", features = ["derive", "cargo"]}
serde_yaml = "0.9.34"
log = "0.4.26"
env_logger = "0.11.7"
async-trait = "0.1.88"
axum-login = "0.17.0"
password-auth = "1.0.0"
tower = "0.5.2"

[profile.release]
opt-level = 3
