[package]
name = "inventorize"
version = "0.0.0"
edition = "2024"
authors = ["FBanna"]
description = "organise parts inventory using a web app and qr code stickers!"

[dependencies]
axum = { version = "0.8.1", features = ["macros"]}
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "redirect"] }
clap = { version = "4.5.32", features = ["derive", "cargo"]}
serde_yaml = "0.9.34"

# log = "0.4.26"
# env_logger = "0.11.7"

async-trait = "0.1.88"
axum-login = "0.17.0"
password-auth = "1.0.0"
tower = "0.5.2"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
typst = "0.13.1"
typst-kit = "0.13.1"
ureq = "3.0.10"
time = "0.3.41"
zune-inflate = "0.2.54"
tar = "0.4.44"
typst-pdf = "0.13.1"
axum-extra = { version = "0.10.1", features = ["erased-json"]}
image = "0.25.6"
zip = { version = "2.6.1", features = ["_deflate-any"]}

[profile.release]
opt-level = 3
